Fixed collapsed sidebar icons too small

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 @import "shadcn/tailwind.css";
+@import "../lib/styles/scrollbars.css";
 
 @custom-variant dark (&:is([data-theme='dark'] *));
 
@@ -44,6 +45,9 @@
     --shadow-spread: -8px;
     --shadow-opacity: 0.18;
     --shadow-color: #0f172a;
+    --scrollbar-color: #e7e8ed;
+    --scrollbar-thumb-color: #eee;
+    --scrollbar-thumb-color-hover: #bbb;
 }
 
 [data-theme='dark'] {
@@ -85,6 +89,9 @@
     --shadow-spread: 0px;
     --shadow-opacity: 0.2;
     --shadow-color: #000;
+    --scrollbar-color: #1a1d2e;
+    --scrollbar-thumb-color: rgba(255, 255, 255, 0.04);
+    --scrollbar-thumb-color-hover: rgba(255, 255, 255, 0.04);
 }
 
 @theme inline {
@@ -186,35 +193,4 @@
 
 .font-sans {
     font-family: var(--font-sans), serif;
-}
-
-
-/* Firefox */
-* {
-    scrollbar-width: thin;
-    scrollbar-color: rgba(255, 255, 255, 0.25) #1a1d2e;
-}
-
-/* WebKit (Chrome, Edge, Safari) */
-::-webkit-scrollbar {
-    width: var(--scrollbar-size);
-    height: var(--scrollbar-size);
-}
-
-::-webkit-scrollbar-track {
-    background: #1a1d2e;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.22);
-    border-radius: var(--scrollbar-size);
-    border: 2px solid #1a1d2e; /* creates padding */
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: rgba(255, 255, 255, 0.05);
-}
-
-::-webkit-scrollbar-corner {
-    background: #1a1d2e;
 }
